Use `getFirst()` instead of `get(0)` on lists