@@ -441,7 +441,7 @@ public class KeycloakAdminUtil {
         // Make sure the user updates the password on first login
         cred.setTemporary(true);
         // Find the user by searching for the username
-        kcUser = getProjectUserRealm().users().search(user.getEmail(), null, null, null, -1, -1).get(0);
+        kcUser = getProjectUserRealm().users().search(user.getEmail(), null, null, null, -1, -1).getFirst();
         kcUser.setCredentials(Collections.singletonList(cred));
         log.debug("Setting password for user: " + kcUser.getId());
         getProjectUserRealm().users().get(kcUser.getId()).resetPassword(cred);
@@ -494,7 +494,7 @@ public class KeycloakAdminUtil {
             log.debug("Skipping user update! Found " + userReps.size() + " users while trying to update, expected 1");
             throw new IOException("User update failed! Found " + userReps.size() + " users while trying to update, expected 1");
         }
-        UserRepresentation user = userReps.get(0);
+        UserRepresentation user = userReps.getFirst();
         boolean updated = false;
         if (email != null && !email.trim().isEmpty()) {
             user.setEmail(email);
@@ -535,7 +535,7 @@ public class KeycloakAdminUtil {
         if (attr.containsKey(attributeName)) {
             List<String> oldAttributeValue = attr.get(attributeName);
             if (oldAttributeValue != null && !oldAttributeValue.isEmpty()) {
-                String attributeValue = oldAttributeValue.get(0);
+                String attributeValue = oldAttributeValue.getFirst();
                 if (attributeValue == null || !attributeValue.equals(newAttributeValue)) {
                     attr.put(attributeName, Collections.singletonList(Objects.requireNonNullElse(newAttributeValue, "")));
                     user.setAttributes(attr);
@@ -564,24 +564,24 @@ public class KeycloakAdminUtil {
         List<UserRepresentation> users = getProjectUserRealm().users().search(email, null, null, null, -1, -1);
         // If we found one, delete it
         if (!users.isEmpty()) {
-            getProjectUserRealm().users().get(users.get(0).getId()).remove();
+            getProjectUserRealm().users().get(users.getFirst().getId()).remove();
         } else {
             // Second try: Find the user by searching for the email
             users = getProjectUserRealm().users().search(null, null, null, email, -1, -1);
             // If we found one, delete it
             if (!users.isEmpty()) {
-                getProjectUserRealm().users().get(users.get(0).getId()).remove();
+                getProjectUserRealm().users().get(users.getFirst().getId()).remove();
             }
         }
         // delete the user in the broker realm
         users = getBrokerRealm().users().search(mrn, null, null, null, -1, -1);
         if (!users.isEmpty()) {
-            getBrokerRealm().users().get(users.get(0).getId()).remove();
+            getBrokerRealm().users().get(users.getFirst().getId()).remove();
         }
         // delete the user in the certificates realm
         users = getCertificatesRealm().users().search(mrn, null, null, null, -1, -1);
         if (!users.isEmpty()) {
-            getCertificatesRealm().users().get(users.get(0).getId()).remove();
+            getCertificatesRealm().users().get(users.getFirst().getId()).remove();
         }
     }
 
@@ -626,7 +626,7 @@ public class KeycloakAdminUtil {
         }
         if (!"public".equals(type)) {
             // The client secret can't be retrived by the ClientRepresentation (bug?), so we need to use the ClientResource
-            ClientRepresentation createdClient = getBrokerRealm().clients().findByClientId(clientId).get(0);
+            ClientRepresentation createdClient = getBrokerRealm().clients().findByClientId(clientId).getFirst();
             return getBrokerRealm().clients().get(createdClient.getId()).getSecret().getValue();
         } else {
             return "";
@@ -666,7 +666,7 @@ public class KeycloakAdminUtil {
                 throw new IOException("Client creation failed due to the client already existing, though it should not! ");
             }
         }
-        ClientRepresentation client = clients.get(0);
+        ClientRepresentation client = clients.getFirst();
         client.setClientAuthenticatorType("client-secret");
         if (redirectUri != null && !redirectUri.trim().isEmpty()) {
             client.setRedirectUris(Collections.singletonList(redirectUri));
@@ -690,7 +690,7 @@ public class KeycloakAdminUtil {
      * @param clientId the ID of the client that should be deleted
      */
     public void deleteClient(String clientId) {
-        ClientRepresentation client = getBrokerRealm().clients().findByClientId(clientId).get(0);
+        ClientRepresentation client = getBrokerRealm().clients().findByClientId(clientId).getFirst();
         getBrokerRealm().clients().get(client.getId()).remove();
     }
 
@@ -701,7 +701,7 @@ public class KeycloakAdminUtil {
      * @return the keycloak json
      */
     public String getClientKeycloakJson(String clientId) {
-        ClientRepresentation client = getBrokerRealm().clients().findByClientId(clientId).get(0);
+        ClientRepresentation client = getBrokerRealm().clients().findByClientId(clientId).getFirst();
         String token = keycloakBrokerInstance.tokenManager().getAccessTokenString();
         String url = keycloakBrokerBaseUrl + "admin/realms/" + keycloakBrokerRealm + "/clients/" + client.getId() + "/installation/providers/keycloak-oidc-keycloak-json";
         return getFromKeycloak(url, token);
@@ -714,7 +714,7 @@ public class KeycloakAdminUtil {
      * @return the keycloak json
      */
     public String getClientJbossXml(String clientId) {
-        ClientRepresentation client = getBrokerRealm().clients().findByClientId(clientId).get(0);
+        ClientRepresentation client = getBrokerRealm().clients().findByClientId(clientId).getFirst();
         String token = keycloakBrokerInstance.tokenManager().getAccessTokenString();
         String url = keycloakBrokerBaseUrl + "admin/realms/" + keycloakBrokerRealm + "/clients/" + client.getId() + "/installation/providers/keycloak-oidc-jboss-subsystem";
         return getFromKeycloak(url, token);
